[package]
name = "ldk-node-sample"
version = "0.2.0-splice"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
hex = "0.4.3"
ldk-node = "0.2.1"
#ldk-node = { path = "../../ldk-node/work1" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

