[package]
name = "ldk-node-sample"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.3"
dirs = "5.0.1"
hex = "0.4.3"
ldk-node = "0.4.1"
tokio = "~1.38.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

